<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressFormActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/address_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/address_editable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_enter_name"
                    android:text="@string/enter_name"
                    android:textSize="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_get_name"
                    android:textSize="20dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_enter_fulladdress"
                    android:text="@string/enter_address"
                    android:textSize="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_get_fulladdress"
                    android:inputType="textPostalAddress"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_enter_landmark"
                    android:text="@string/enter_landmark"
                    android:textSize="20dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_get_landmark"
                    android:inputType="textPostalAddress"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_enter_city"
                    android:text="@string/enter_city"
                    android:textSize="20dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_get_city"
                    android:inputType="textPostalAddress"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_enter_pincode"
                    android:text="@string/enter_pincode"
                    android:textSize="20dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_get_pincode"
                    android:inputType="number"
                    android:textSize="20dp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_enter_phoneno"
                    android:text="@string/enter_phoneno"
                    android:textSize="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_form_get_phoneno"
                    android:inputType="phone"
                    android:textSize="20dp"/>

                <Button
                    android:id="@+id/bt_add_address_form_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:textColor="#ffffff"
                    android:background="#FF9800"
                    android:layout_gravity="bottom"
                    android:text="submit"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>